platform/k8s/base/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: secure-demo
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: api
          image: secure-demo-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: uploads
              mountPath: /data
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            httpGet:
              path: /health/live
              port: 3001
            initialDelaySeconds: 8
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 256Mi
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-data
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: secure-demo
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 3001
      targetPort: 3001
