platform/k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: secure-demo
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: secure-demo-web:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: secure-demo
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
